syntax = "proto3";

package goods;

// NewGoods 新上架商品
message NewGoodsResult {
  repeated Goods goodses = 1;
}

message Goods{
  uint32 iD = 1;   //商品id
	uint32 catID = 2;    //分类id
	uint32 extendCatID = 3;    //扩展分类id
	string goodsSN = 4;   //商品编号
	string goodsName = 5;   //商品名称
	uint32 clickCount = 6;    //点击数
	uint32 brandID = 7;    //品牌id
	uint32 storeCount = 8;    //库存数量
	uint32 commentCount = 9;    //商品评论数
	uint32 weight = 10;    //商品重量克为单位
	float marketPrice = 11;  //市场价
	float shopPrice = 12;  //本店价
	float costPrice = 13;  //商品成本价
	string priceLadder = 14;   //价格阶梯
	string keywords = 15;   //商品关键词
	string goodsRemark = 16;   //商品简单描述
	string goodsContent = 17;   //商品详细描述
	string originalImg = 18;   //商品上传原始图
	bool isReal = 19;     //是否为实物
	bool isOnSale = 20;     //是否上架
  uint32 salesSum = 21;   //销量
}

// 首页推荐商品
message RecommendResult {
  repeated Recommend recommend = 1;
}

message Recommend {
  uint32 iD = 1;  //商品id
	uint32 catID = 2;   //分类id
	string goodsName = 3;  //商品名称
  float shopPrice = 4;  // 本店价格
}

// 商品详情
message DetailResult {
  Goods goods = 1; //商品基本信息
  repeated Spec specs = 2; // 规格
  repeated SpecPrice specPrices = 3; // 规格对应的价格
  repeated Comment comms = 4; // 评论
  repeated Gallery gallers = 5; // 规格图轮播展示
}

// 规格
message Spec {
  string specName = 1; // 规格名称
  repeated SpecItem items = 2;
}

// 规格条目
message SpecItem {
  uint32 itemID = 1; //id
  string item = 2; // 名称
  string src = 3; // 规格图片
}

// 不同规格对应的价格
message SpecPrice {
  uint32 iD = 1;  //规格商品id
	uint32 goodsID = 2;  //商品id
	string key = 3;  //规格键名
	string keyName = 4;  //规格键名中文
	float price = 5; //价格
	uint32 storeCount = 6;  //库存数量
	string barCode = 7;  //商品条形码
	string sku = 8;  //SKU
	string specImg = 9;  //规格商品主图
}

// 评论
message Comment {
  uint32 iD = 1; // 评论id
	uint32 goodsID = 2; // 商品id
	string email = 3; // email邮箱
	string username = 4; // 用户名
	string content = 5; // 评论内容
	uint32 addTime = 6; // 添加时间
	bool isShow = 7;   // 是否显示
	uint32 parentID = 8; // 父id
	uint32 userID = 9; // 评论用户
	string img = 10; // 晒单图片
	uint32 deliverRank = 11;  // 物流评价等级
	uint32 goodsRank = 12;  // 商品评价等级
	uint32 serviceRank = 13;  // 商家服务态度评价等级
	uint32 zanNum = 14; // 被赞数
	bool isAnonymous = 15;   // 是否匿名评价
	string headPic = 16; // 评论人头像
}

// 详情轮播图组
message Gallery {
  string imageUrl = 1;
}
